--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<div id="fb-root"></div>
+	<!-- <div id="fb-root"></div>
 	<script>
 		(function(d, s, id) {
 			var js, fjs = d.getElementsByTagName(s)[0];
@@ -31,7 +31,7 @@
 			js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5";
 			fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));
-	</script>
+	</script> -->
 
 
 
@@ -193,7 +193,7 @@
 							<a href=""><i class="fa fa-linkedin-square fa-2x" style="color:rgb(1,119,181)"></i></a>
 
 							<!-- <h4>&nbsp;</h4> -->
-							<div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 2px;"></div>
+							<!-- <div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 2px;"></div> -->
 						</div>
 
 					</div>
