--- a/Gmt/templates/views/doctors.hbs
+++ b/Gmt/templates/views/doctors.hbs
@@ -92,7 +92,7 @@
 
 
 <div class="row procedure">
-	<div class="col-lg-8 col-sm-8 col-xs-12 col-md-8 ">
+	<div class="col-lg-8 col-sm-8 col-xs-12 col-md-8 border">
 		<div class="row ">
 			<!-- <div class="col-lg-0 col-xs-1 col-sm-0 col-md-0"></div> -->
 			{{#each doctors}}
