--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -100,15 +100,15 @@
 									<h4 class="panel-title">
 										<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="false" aria-controls="collapseOne">
 											<div class="row accordion">
-												<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 title">
+												<div class="col-lg-6 col-sm-6 col-xs-6 col-md-6 title">
 													{{name}}
 													<!-- <span class="fa fa-plus-square-o"></span> -->
 												</div>
-												<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 price">
+												<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3 price">
 													{{price}}
 												</div>
-												<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-													<input class="btn btn-primary btn-md doc_btn" type="submit" value="Enquiry" style="outline:none">
+												<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+													<input class="btn btn-primary btn-md doc_btn" type="submit" value="Get Free Quote" style="outline:none">
 												</div>
 											</div>
 										</a>
@@ -198,14 +198,14 @@
 													<span style="font-family:SourceSansPro-Regular;font-size:16px;color:rgb(95,95,95);">Medical Reports</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-													<span style="color:rgb(95,95,95);" class="glyphicon glyphicon-chevron-down" style=""></span>
+													<span style="color:rgb(95,95,95); padding-top:6px; " class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
 									</a>
 								</div>
 								<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px;padding-top: 0px; padding-bottom: 0px;">
+									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px; ">
 										<input type="file" name="fileupload" size="80" value="Attach" multiple>
 									</div>
 								</div>
@@ -220,14 +220,14 @@
 													<span style="font-family:SourceSansPro-Regular;font-size:16px;color:rgb(95,95,95);"> Allergies</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-													<span style="color:rgb(95,95,95);" class="glyphicon glyphicon-chevron-down" style=""></span>
+													<span style="color:rgb(95,95,95); padding-top:3px;" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
 									</a>
 								</div>
 								<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px;padding-top: 0px; padding-bottom: 0px;">
+									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px;">
 										<input type="text" class="form-control" id="exampleInputName1" placeholder="Allergies">
 									</div>
 								</div>
@@ -243,14 +243,14 @@
 														Symptoms</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-													<span style="color:rgb(95,95,95);" class="glyphicon glyphicon-chevron-down" style=""></span>
+													<span style="color:rgb(95,95,95); padding-top:3px;" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
 									</a>
 								</div>
 								<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px;padding-top: 0px; padding-bottom: 0px;">
+									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px;">
 										<input type="text" class="form-control" id="exampleInputName2" placeholder="Symptoms">
 									</div>
 								</div>
@@ -263,10 +263,10 @@
 							<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 								<input type="text" class="form-control" id="age" placeholder="Age" name="age" style="padding-top: 10px; padding-bottom: 10px; margin-top: 0px;">
 							</div>
-							<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
 							</div>
-							<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7" style="padding-top: 10px;">
-								<label for="gender" style="font-family:SourceSansPro-Regular;font-weight:normal;font-size:16px;">Gender:</label>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="padding-top: 10px;">
+								<label for="gender" style="font-family:SourceSansPro-Regular;font-weight:normal;font-size:16px; color:rgb(95,95,95) ">Sex:</label>
 								<label class="radio-inline">
 									<input type="radio" name="gender" value="Male" style="font-family:SourceSansPro-Regular;font-weight:normal;font-size:16px;">M</label>
 								<label class="radio-inline">
