--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -9,8 +9,17 @@
 		{{/each}} -->
 		<div class="row procedure">
 <div class="homepage">
-
-	<!-- <img src="../images/GMTHome(2).jpg" style="width:100% height:auto;"> -->
+	<div class="row pp">
+		<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
+		</div>
+		<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
+			<h2 style="margin-left: -2px;">Meet The Doctors</h2>
+			<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
+			<div class="border_doc">&nbsp;</div>
+			<p>Choose the right doctor for your treatment</p>
+			<p>Consult a specialist for a second opinion</p>
+		</div>
+	</div>
 </div>
 
 <div class="row">
